tests/type_errors/unifying_without_type_hints.sy
-- Should figure out that the type for this function is `Int -> Int`, it doesn't do that
def id : _ : a = a

def a : Int : = id ' 1
def b : Str : = id ' 1

--+ args: -o -t -
--+ expected exit status: 7
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ Str
--+ ----
--+ Int
--+ 
--+   5| def b : Str : = id ' 1
--+      ^^^^^^^^^^^^^^^^^^^^^^

